<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewGatete"
                    android:layout_width="wrap_content"
                    android:layout_height="347dp"
                    android:layout_gravity="center"
                    android:onClick="cancelButton"
                    android:paddingBottom="45dp"
                    android:paddingTop="45dp"
                    app:srcCompat="@drawable/gatos" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp">

                    <ImageView
                        android:id="@+id/userIcon"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/usuario" />

                    <TextView
                        android:id="@+id/textViewUser"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/editTextUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp">

                    <ImageView
                        android:id="@+id/mailIcon"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/sobre" />

                    <TextView
                        android:id="@+id/textViewEmail"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/correo" />

                    <EditText
                        android:id="@+id/editTextEmailAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ems="10"
                        android:hint="@string/correo"
                        android:inputType="textEmailAddress" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp">

                    <ImageView
                        android:id="@+id/phoneIcon"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/llamadatelefonica" />

                    <TextView
                        android:id="@+id/textViewPhone"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/telefon" />

                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ems="10"
                        android:hint="@string/contrasenya"
                        android:inputType="phone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp">


                    <ImageView
                        android:id="@+id/lockIcon"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/cerrar" />

                    <TextView
                        android:id="@+id/textViewPassword"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/contrasenya" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ems="10"
                        android:hint="@string/contrasenya"
                        android:inputType="textPassword" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="35dp">

                    <Button
                        android:id="@+id/acceptButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="4"
                        android:backgroundTint="#8BC34A"
                        android:onClick="acceptButton"
                        android:text="@string/accept" />

                    <Button
                        android:id="@+id/cancelButton"
                        android:layout_width="152dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:backgroundTint="#F44336"
                        android:onClick="cancelButton"
                        android:text="@string/cancel" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>